tests/rosetta/transpiler/C/bitwise-io-2.error
compile failed: exit status 1: /tmp/ctranspile3625757247/bitwise-io-2.mochi.c: In function ‘ReadBits’:
/tmp/ctranspile3625757247/bitwise-io-2.mochi.c:215:16: error: incompatible types when returning type ‘Anon2’ but ‘Anon3’ was expected
  215 |         return readBitsLSB(r, width);
      |                ^~~~~~~~~~~~~~~~~~~~~
/tmp/ctranspile3625757247/bitwise-io-2.mochi.c: In function ‘ord’:
/tmp/ctranspile3625757247/bitwise-io-2.mochi.c:266:21: warning: implicit declaration of function ‘indexOf’; did you mean ‘index’? [-Wimplicit-function-declaration]
  266 |     long long idx = indexOf(upper, ch);
      |                     ^~~~~~~
      |                     index
/tmp/ctranspile3625757247/bitwise-io-2.mochi.c:275:23: warning: implicit declaration of function ‘parseIntStr’ [-Wimplicit-function-declaration]
  275 |         return 48LL + parseIntStr(ch);
      |                       ^~~~~~~~~~~

