tests/rosetta/transpiler/C/bitwise-io-2.c
// Generated by Mochi 0.10.32 on 2025-08-03 22:59 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t bytesOfStr_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;
typedef struct Anon3 Anon3;
typedef struct Reader Reader;
typedef struct Writer Writer;

struct Anon1 {
    int val;
    int eof;
};

struct Anon2 {
    long long val;
    int eof;
};

struct Anon3 {
    int val;
    int eof;
};

struct Reader {
    const char* order;
    long long *data;
    size_t data_len;
    long long idx;
    long long bits;
    long long nbits;
};

struct Writer {
    const char* order;
    long long bits;
    long long nbits;
    long long *data;
    size_t data_len;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long pow2(long long n);
long long lshift(long long x, long long n);
long long rshift(long long x, long long n);
Writer NewWriter(const char* order);
Writer writeBitsLSB(Writer w, long long c, long long width);
Writer writeBitsMSB(Writer w, long long c, long long width);
Writer WriteBits(Writer w, long long c, long long width);
Writer CloseWriter(Writer w);
Reader NewReader(long long * data, size_t data_len, const char* order);
Anon2 readBitsLSB(Reader r, long long width);
Anon3 readBitsMSB(Reader r, long long width);
Anon3 ReadBits(Reader r, long long width);
const char* toBinary(long long n, long long bits);
const char* bytesToBits(long long * bs, size_t bs_len);
const char* bytesToHex(long long * bs, size_t bs_len);
long long ord(const char* ch);
const char* chr(long long n);
long long * bytesOfStr(const char* s);
const char* bytesToDec(long long * bs, size_t bs_len);
void Example();
int main(void);

long long pow2(long long n) {
    int v = 1LL;
    int i = 0LL;
    while (i < n) {
        v = v * 2LL;
        i = i + 1LL;
    }
    return v;
}

long long lshift(long long x, long long n) {
    return x * pow2(n);
}

long long rshift(long long x, long long n) {
    return x / pow2(n);
}

Writer NewWriter(const char* order) {
    return (Writer){.order = order, .bits = 0LL, .nbits = 0LL, .data = NULL, .data_len = 0};
}

Writer writeBitsLSB(Writer w, long long c, long long width) {
    w.bits = w.bits + lshift(c, w.nbits);
    w.nbits = w.nbits + width;
    while (w.nbits >= 8LL) {
        int b = w.bits % 256LL;
        w.data = list_append_long_long(w.data, &w.data_len, b);
        w.bits = rshift(w.bits, 8LL);
        w.nbits = w.nbits - 8LL;
    }
    return w;
}

Writer writeBitsMSB(Writer w, long long c, long long width) {
    w.bits = w.bits + lshift(c, (32LL - width) - w.nbits);
    w.nbits = w.nbits + width;
    while (w.nbits >= 8LL) {
        int b = rshift(w.bits, 24LL) % 256LL;
        w.data = list_append_long_long(w.data, &w.data_len, b);
        w.bits = (w.bits % pow2(24LL)) * 256LL;
        w.nbits = w.nbits - 8LL;
    }
    return w;
}

Writer WriteBits(Writer w, long long c, long long width) {
    if (strcmp(w.order, "LSB") == 0) {
        return writeBitsLSB(w, c, width);
    }
    return writeBitsMSB(w, c, width);
}

Writer CloseWriter(Writer w) {
    if (w.nbits > 0LL) {
        if (strcmp(w.order, "MSB") == 0) {
            w.bits = rshift(w.bits, 24LL);
        }
        w.data = list_append_long_long(w.data, &w.data_len, w.bits % 256LL);
    }
    w.bits = 0LL;
    w.nbits = 0LL;
    return w;
}

Reader NewReader(long long * data, size_t data_len, const char* order) {
    return (Reader){.order = order, .data = data, .data_len = data_len, .idx = 0LL, .bits = 0LL, .nbits = 0LL};
}

Anon2 readBitsLSB(Reader r, long long width) {
    while (r.nbits < width) {
        if (r.idx >= len(r.data)) {
            return (Anon2){.val = 0LL, .eof = 1LL};
        }
        long long b = r.data[(int)(r.idx)];
        r.idx = r.idx + 1LL;
        r.bits = r.bits + lshift(b, r.nbits);
        r.nbits = r.nbits + 8LL;
    }
    int mask = pow2(width) - 1LL;
    int out = r.bits % (mask + 1LL);
    r.bits = rshift(r.bits, width);
    r.nbits = r.nbits - width;
    return (Anon2){.val = out, .eof = 0LL};
}

Anon3 readBitsMSB(Reader r, long long width) {
    while (r.nbits < width) {
        if (r.idx >= len(r.data)) {
            return (Anon3){.val = 0LL, .eof = 1LL};
        }
        long long b = r.data[(int)(r.idx)];
        r.idx = r.idx + 1LL;
        r.bits = r.bits + lshift(b, 24LL - r.nbits);
        r.nbits = r.nbits + 8LL;
    }
    long long out = rshift(r.bits, 32LL - width);
    r.bits = (r.bits * pow2(width)) % pow2(32LL);
    r.nbits = r.nbits - width;
    return (Anon3){.val = out, .eof = 0LL};
}

Anon3 ReadBits(Reader r, long long width) {
    if (strcmp(r.order, "LSB") == 0) {
        return readBitsLSB(r, width);
    }
    return readBitsMSB(r, width);
}

const char* toBinary(long long n, long long bits) {
    const char* b = "";
    long long val = n;
    int i = 0LL;
    while (i < bits) {
        b = str_concat(str_int(val % 2LL), b);
        val = val / 2LL;
        i = i + 1LL;
    }
    return b;
}

const char* bytesToBits(long long * bs, size_t bs_len) {
    const char* out = "[";
    int i = 0LL;
    while (i < bs_len) {
        out = str_concat(out, toBinary(bs[(int)(i)], 8LL));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    out = str_concat(out, "]");
    return out;
}

const char* bytesToHex(long long * bs, size_t bs_len) {
    const char* digits = "0123456789ABCDEF";
    const char* out = "";
    int i = 0LL;
    while (i < bs_len) {
        long long b = bs[(int)(i)];
        int hi = b / 16LL;
        int lo = b % 16LL;
        out = str_concat(str_concat(out, _substring(digits, hi, hi + 1LL)), _substring(digits, lo, lo + 1LL));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    return out;
}

long long ord(const char* ch) {
    const char* upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
    const char* lower = "abcdefghijklmnopqrstuvwxyz";
    long long idx = indexOf(upper, ch);
    if (idx >= 0LL) {
        return 65LL + idx;
    }
    idx = indexOf(lower, ch);
    if (idx >= 0LL) {
        return 97LL + idx;
    }
    if ((strcmp(ch, "0") >= 0) && (strcmp(ch, "9") <= 0)) {
        return 48LL + parseIntStr(ch);
    }
    if (strcmp(ch, " ") == 0) {
        return 32LL;
    }
    if (strcmp(ch, ".") == 0) {
        return 46LL;
    }
    return 0LL;
}

const char* chr(long long n) {
    const char* upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
    const char* lower = "abcdefghijklmnopqrstuvwxyz";
    if ((n >= 65LL) && (n < 91LL)) {
        return _substring(upper, n - 65LL, n - 64LL);
    }
    if ((n >= 97LL) && (n < 123LL)) {
        return _substring(lower, n - 97LL, n - 96LL);
    }
    if ((n >= 48LL) && (n < 58LL)) {
        const char* digits = "0123456789";
        return _substring(digits, n - 48LL, n - 47LL);
    }
    if (n == 32LL) {
        return " ";
    }
    if (n == 46LL) {
        return ".";
    }
    return "?";
}

long long * bytesOfStr(const char* s) {
    long long *bs = NULL;
    size_t bs_len = 0;
    int i = 0LL;
    while (i < strlen(s)) {
        bs = list_append_long_long(bs, &bs_len, ord(_substring(s, i, i + 1LL)));
        i = i + 1LL;
    }
    return bytesOfStr_len = bs_len, bs;
}

const char* bytesToDec(long long * bs, size_t bs_len) {
    const char* out = "";
    int i = 0LL;
    while (i < bs_len) {
        out = str_concat(out, str_int(bs[(int)(i)]));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    return out;
}

void Example() {
    const char* message = "This is a test.";
    long long *msgBytes = bytesOfStr(message);
    size_t msgBytes_len = bytesOfStr_len;
    puts(str_concat(str_concat(str_concat("\"", message), "\" as bytes: "), bytesToDec(msgBytes, msgBytes_len)));
    puts(str_concat("    original bits: ", bytesToBits(msgBytes, msgBytes_len)));
    Writer bw = NewWriter("MSB");
    int i = 0LL;
    while (i < msgBytes_len) {
        bw = WriteBits(bw, msgBytes[(int)(i)], 7LL);
        i = i + 1LL;
    }
    bw = CloseWriter(bw);
    puts(str_concat("Written bitstream: ", bytesToBits(bw.data, bw.data_len)));
    puts(str_concat("Written bytes: ", bytesToHex(bw.data, bw.data_len)));
    Reader br = NewReader(bw.data, bw.data_len, "MSB");
    const char* result = "";
    while (1LL) {
        Anon3 r = ReadBits(br, 7LL);
        if (r.eof) {
            break;
        }
        int v = r.val;
        if (v != 0LL) {
            result = str_concat(result, chr(v));
        }
    }
    puts(str_concat(str_concat("Read back as \"", result), "\""));
}

int main(void) {
    {
        long long __start = _now();
        Example();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
